# brew-tools

./: Brewfile  Brewfile.lock.json  CMakeLists.txt  brew-link-apps.bash  brew-link-files  brew-link.bash  global.cmake
brew-link-apps/: CMakeLists.txt
brew-link-apps/include/: linkAppsBin.hpp
brew-link-apps/src/: defaultEnv.cpp  dumpLinks.cpp  generateAppLinks.cpp  main.cpp
brew-link-files/: CMakeLists.txt
brew-link-files/include/: linkFilesBin.hpp
brew-link-files/src/: backupFile.cpp  changedLinks.cpp  createLinks.cpp  main.cpp  removeLinks.cpp  sortFile.cpp
libhomebrewtools/: CMakeLists.txt
libhomebrewtools/include/: homebrewTools.hpp
libhomebrewtools/src/: backupFile.cpp  changedLinks.cpp  checkLinks.cpp  createLinks.cpp  derefLinkPairList.cpp  derefPrefix.cpp  loadLinks.cpp  removeLinks.cpp  sortFile.cpp  unPrefix.cpp
src/: main.cpp
